# pathtracer

./: CMakeLists.txt
.cache/clangd/index/: camera.c.49A7DAF471B1A08F.idx  camera.h.6CEF5DFFF2647D55.idx  input.h.7D6C72B5262FFB3A.idx  intersection.h.E5BBDD1621314EEA.idx  main.c.166E898AF349DD64.idx  math_utils.c.7CD2E91F9F10C81E.idx  math_utils.h.52D1A3E46096C6E4.idx  matrix_transform.c.1CC8B88BFDA73979.idx  matrix_transform.h.E2A53E812FD978F2.idx  min.c.D44DB79DDB31AEB9.idx  min.h.BAC57C7E70EFFEA5.idx  pathtracer.c.DF6B8356637D1932.idx  pathtracer.h.61EFCCCAB3FE8466.idx  platform.c.EE89557C5E8413FE.idx  platform.h.814533890E3837B3.idx  quaternion.c.544FE0BEE46014B4.idx  quaternion.h.93E7532C95150F88.idx  ray.c.249049F4AA9CF569.idx  ray.h.6BF771466E4887B8.idx  sphere.h.4100C1455169107B.idx  vector.c.FB3BFC5B581DA93D.idx  vector.h.2D936C8FA6AF67D2.idx  world.c.90CBDE8C00B4CD10.idx  world.h.9FD4F23DABFD2F3B.idx
src/: box.h  camera.c  camera.h  input.h  intersection.h  main.c  math_utils.c  math_utils.h  matrix_transform.c  matrix_transform.h  min.c  min.h  pathtracer.c  pathtracer.h  platform.c  platform.h  quaternion.c  quaternion.h  ray.c  ray.h  sphere.h  vector.c  vector.h  world.c  world.h
